# shipwatch

./: README.md  pyproject.toml
src/: app.py  client.py  models.py  store.py  webhooks.py
tests/: test_client.py
